--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  simple_animations: ^5.0.1
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +64,8 @@ flutter:
     - assets/images/grupo_malwee_letra.png
     - assets/images/grupo_malwee_logo.png
     - assets/images/grupo_malwee.png
-    - assets\fonts\Rubik-Regular.ttf
+    - assets/images/element_abstract.png
+    - assets/fonts/Rubik-Regular.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
