--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/images/grupo_malwee_logo.png
     - assets/images/grupo_malwee.png
     - assets/images/element_abstract.png
+    - assets/images/img_malwee.png
     - assets/fonts/Rubik-Regular.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
