--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   simple_animations: ^5.0.1
+  pdf: ^3.10.4
+  path: ^1.8.3
+  path_provider: ^2.0.15
+  pdf_viewer_plugin: ^2.0.1
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_test:
