--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,9 @@ dependencies:
   pdf: ^3.10.4
   path: ^1.8.3
   path_provider: ^2.0.15
-  pdf_viewer_plugin: ^2.0.1
   http: ^1.0.0
+  syncfusion_flutter_pdfviewer: ^22.1.36
+  share_extend: ^2.0.0
 
 dev_dependencies:
   flutter_test:
